--- a/config/packages/prod/doctrine.yaml
+++ b/config/packages/prod/doctrine.yaml
@@ -1,5 +1,7 @@
 doctrine:
     orm:
+        default_entity_manager: default
+        customer_entity_manager: syesca
         auto_generate_proxy_classes: false
         metadata_cache_driver:
             type: pool
