--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,13 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # login_throttling:
             #    max_attempts: 3
