--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,5 +46,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/backend, roles: ROLE_USER }
+        - { path: ^/backend/activite/, roles: ROLE_ADMIN }
+        - { path: ^/backend/config/, roles: ROLE_ADMIN }
         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
